# DirMeta

./: LICENSE  README.md  pyproject.toml
